--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,7 +1,9 @@
 .users {
     padding-top: 15px;
 }
-
+h1 {
+    padding-top: 10px;
+}
 .wrapper {
     max-width: 800px;
     margin-top: 10px;
@@ -32,7 +34,7 @@
     justify-content: center;
     align-items: center;
     width: 70px;
-} 
+}
 
 .pic {
     width: 45px;
@@ -43,4 +45,24 @@
 .name {
     display: flex;
     justify-content: center;
+}
+
+.page {
+    border: 1px solid #636267;
+    border-radius: 50%;
+    padding: 5px 10px;
+    color: #fff;
+    background: rgb(82, 82, 217);
+     /* rgb(103, 139, 207); */
+    margin: 2px;
+    cursor: pointer;
+}
+
+.selectedPage {
+    border: 1px solid #636267;
+    border-radius: 50%;
+    padding: 5px 10px;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 2px;
 }
