--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,12 +1,14 @@
 .header {
-    background: #ffffff !important; 
+    background: #ffffff !important;
     grid-area: h;
-    background-color: #f9f9f9 !important ;
+    background-color: #f9f9f9 !important;
+    display: flex;
+    align-items: center;
 }
 
 .header img {
     width: 50px;
     height: 50px;
     margin: 10px 0px 10px 0px;
+    margin-right: 10px;
 }
-
